Fix Modal component styling on smaller viewports

--- a/src/components/common/styles/ModalContent.scss
+++ b/src/components/common/styles/ModalContent.scss
@@ -1,55 +1,61 @@
 @import "../../../styles/theme";
+@import "../../../styles/mixins";
 
 .c-modal-cover {
+    align-items: center;
+    background-color: $black-30;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    left: 0;
     position: fixed;
     top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10; // This must be at a higher index to the rest of your page content
     transform: translateZ(0);
-    background-color: $black-30;
+    width: 100%;
+    z-index: 10; // This must be at a higher index to the rest of your page content
 }
 
 .c-modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 2.5em 1.5em 1.5em 1.5em;
     background-color: $white;
-    border-radius: 3px;
+    border-radius: 5px;
     box-shadow: 0 0 10px 3px $black-10;
+    min-height: 20%;
+    padding: 2.5em 1.5em 1.5em 1.5em;
+    position: relative;
     overflow-y: auto;
+    width: 75%;
     -webkit-overflow-scrolling: touch;
+    
+    @include respond-to(medium-screens) {
+        max-width: 25em;
+        width: 100%;
+    }
 
-    @media screen and (min-width: 500px) {
-        left: 50%;
-        top: 50%;
-        height: auto;
-        transform: translate(-50%, -50%);
-        max-width: 30em;
-        max-height: calc(100% - 1em);
+    @include respond-to(wide-screens) {
+        max-width: 40em;
+        width: 100%;
+    }
+
+    @include respond-to(extra-wide-screens) {
+        max-width: 45em;
+        width: 100%;
     }
 }
 
 .c-modal__close {
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: .5em;
-    line-height: 1;
     background: $dark-white;
     border: 0;
-    box-shadow: 0;
     cursor: pointer;
+    padding: .5em;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 .c-modal__close-icon {
-    width: 25px;
-    height: 25px;
     fill: transparent;
+    height: 25px;
+    width: 25px;
     stroke: $blackish;
     stroke-linecap: round;
     stroke-width: 2;
